--- a/market/templates/home.html
+++ b/market/templates/home.html
@@ -47,7 +47,7 @@
       <div class = "table-container">
         <table class = "table table-bordered table-hover table-transparent table-responsive" style="text-align: center; color: black;">
           <thead>
-            <tr style="position: sticky; top: 0; background-color: #81c9e3;">                            
+            <tr style="position: sticky; top: 0; background-color: #81e3d3;">                            
               <th>
                 Business Name
               </th>
