--- a/market/templates/base.html
+++ b/market/templates/base.html
@@ -45,7 +45,7 @@
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
 
-        <a class="navbar-brand" href="{{ url_for('home_page') }}">Google Scrapper</a>
+        <a class="navbar-brand" href="{{ url_for('home_page') }}">Tracking Bot</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
           aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
