--- a/market/templates/form.html
+++ b/market/templates/form.html
@@ -23,7 +23,12 @@
         <div>
             {{ form.url.label }}
             {{ form.url( class= 'form-control', placeholder = 'Profile URL') }}
-        </div>        
+        </div>
+        <br>        
+        <div>
+            {{ form.category.label }}
+            {{ form.category(class = 'form-control') }}
+        </div>
     <br>
     
     {{ form.submit(class = 'btn btn-primary') }}
